Thu Mar  4 13:08:02 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
        * DAnCE/tests/CIAO/NodeManager-Deployments/run_test.pl:

          Ported to use dance_plan_launcher directly.
        
        * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_1_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_1.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_receiver.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_sender.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Quoter/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/run_test.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_pub.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_pub3.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_pub_BE.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub2.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub3.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub_BE.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_test.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_pub.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_sub.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLDeadline/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLQoS/descriptors/run_test.pl: